--- a/strona/css/style.css
+++ b/strona/css/style.css
@@ -913,4 +913,16 @@ a:focus {
 .footer_section .footer-info p a {
   color: inherit;
 }
+img{
+  max-width: 100%;
+  height: 20%;
+  background: lightblue;
+  background: radial-gradient(white 30%, lightblue 70%);
+}
+
+.fa-star,
+.fa-star-half{
+  color: yellowgreen;
+  padding: 3%, 0; 
+}
 /*# sourceMappingURL=style.css.map */
